--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 </head>
     <body>
-        <section class="conteudo-principal"></section>
-        <h2 class="titulo principal">Meus Objetivos do Ano<span>_<span></h2>
-        <div class="botoes">
+     <section class="conteudo-principal"></section>
+     <h2 class="titulo principal">Meus Objetivos do Ano<span>_<span></h2>
+    <div class="botoes">
             <button class="botao ativo">Cursos na Alura</button>
             <button class="botao">Criar projetos em JavaScript</button>
             <button class="botao">Criar um portfólio</button>
             <button class="botao">Atualizar meu currículo</button>
             </div>
-            <script src=»main.js»></script>
+            <script src="main.js"></script>
         </body>
 </html>
